--- a/results/dataframes/resutls_vizualizations_micro.ipynb
+++ b/results/dataframes/resutls_vizualizations_micro.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -193,15 +193,16 @@
     "ax.set_ylabel(\"F1 Score\")\n",
     "ax.set_xlabel(\"Model\")\n",
     "ax.legend()\n",
-    "plt.savefig(\"eval_micro/mutag_pred_fid.png\", dpi=300)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"eval_micro/mutag_pred_fid.png\", dpi=300)\n",
+    "\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -254,18 +255,235 @@
     "ax.set_ylabel(\"F1 Score\")\n",
     "ax.set_xlabel(\"Model\")\n",
     "ax.legend()\n",
-    "plt.savefig(\"eval_micro/aifb_pred_fid.png\", dpi=300)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"eval_micro/aifb_pred_fid.png\", dpi=300)\n",
+    "\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def filter_df(df, models, eval_metrics, metric_type):\n",
+    "    \"\"\"\n",
+    "    Filter the DataFrame based on provided models, a list of evaluation metrics,\n",
+    "    and a metric type (Fidelity or Prediction Accuracy),\n",
+    "    and return selected columns including the dataset name.\n",
+    "\n",
+    "    :param df: DataFrame containing the dataset.\n",
+    "    :param models: List of model names to filter.\n",
+    "    :param eval_metrics: List of evaluation metrics to filter (e.g., ['F1 Score', 'Precision']).\n",
+    "    :param metric_type: Type of metric (e.g., 'Fidelity', 'Prediction Accuracy').\n",
+    "    :return: Filtered DataFrame with selected columns.\n",
+    "    \"\"\"\n",
+    "    # Define the columns to return - adding 'Dataset' to the list\n",
+    "    columns_to_return = [\"Dataset\", \"Model\", \"Metric\"] + eval_metrics\n",
+    "\n",
+    "    # Filtering the DataFrame\n",
+    "    filtered_df = df[\n",
+    "        (df[\"Model\"].isin(models)) & (df[\"Metric\"].str.contains(metric_type))\n",
+    "    ]\n",
+    "\n",
+    "    # Checking for multiple evaluation metrics and filtering\n",
+    "    for metric in eval_metrics:\n",
+    "        if metric not in df.columns:\n",
+    "            raise ValueError(f\"Metric '{metric}' not found in DataFrame columns\")\n",
+    "\n",
+    "    # Returning only the specified columns\n",
+    "    return filtered_df[columns_to_return]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>F1 Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MUTAG</td>\n",
+       "      <td>CELOE</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.720588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>MUTAG</td>\n",
+       "      <td>EVO</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.632353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>MUTAG</td>\n",
+       "      <td>PGExplainer</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.764706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>MUTAG</td>\n",
+       "      <td>SubGraphX</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.764706</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Dataset        Model    Metric  F1 Score\n",
+       "0    MUTAG        CELOE  Fidelity  0.720588\n",
+       "4    MUTAG          EVO  Fidelity  0.632353\n",
+       "9    MUTAG  PGExplainer  Fidelity  0.764706\n",
+       "15   MUTAG    SubGraphX  Fidelity  0.764706"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Precision\tRecall\tF1 Score\tJaccard Similarity\n",
+    "# Prediction Accuracy\n",
+    "\n",
+    "filtered_data = filter_df(\n",
+    "    df,\n",
+    "    [\"SubGraphX\", \"CELOE\", \"PGExplainer\", \"EVO\"],\n",
+    "    [\"F1 Score\"],\n",
+    "    \"Fidelity\",\n",
+    ")\n",
+    "filtered_data[filtered_data[\"Dataset\"] == \"MUTAG\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfm = pd.read_csv(\"eval_data_macro.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Metric</th>\n",
+       "      <th>F1 Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>AIFB</td>\n",
+       "      <td>CELOE</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.266317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>AIFB</td>\n",
+       "      <td>EVO</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.421943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>AIFB</td>\n",
+       "      <td>PGExplainer</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.823654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>AIFB</td>\n",
+       "      <td>SubGraphX</td>\n",
+       "      <td>Fidelity</td>\n",
+       "      <td>0.763509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Dataset        Model    Metric  F1 Score\n",
+       "2     AIFB        CELOE  Fidelity  0.266317\n",
+       "6     AIFB          EVO  Fidelity  0.421943\n",
+       "12    AIFB  PGExplainer  Fidelity  0.823654\n",
+       "18    AIFB    SubGraphX  Fidelity  0.763509"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered_datam = filter_df(\n",
+    "    dfm,\n",
+    "    [\"SubGraphX\", \"CELOE\", \"PGExplainer\", \"EVO\"],\n",
+    "    [\"F1 Score\"],\n",
+    "    \"Fidelity\",\n",
+    ")\n",
+    "filtered_datam[filtered_datam[\"Dataset\"] == \"AIFB\"]"
+   ]
   }
  ],
  "metadata": {
